Remove extra spaces in FB2 paragraphs

BUG: 359059